--- a/n.html
+++ b/n.html
@@ -223,6 +223,9 @@
         <a href="mailto:ton@email.com"><i class="fa-solid fa-envelope"></i> Email</a>
       </div>
     </section>
+    <div style="background: #ffcc00; padding: 10px; text-align: center; font-weight: bold;">
+        ⚠️ Ce site est une expérience personnelle, il n’est pas destiné à un usage professionnel. Merci de votre compréhension !
+    </div>
   </main>
 
 
