message du commit

--- a/n.html
+++ b/n.html
@@ -218,7 +218,7 @@
 
       <h3 style="margin-top: 30px;">📱 Suivez-nous :</h3>
       <div class="social-links">
-        <a href="https://www.instagram.com/toncompte" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <a href="https://www.instagram.com/pearls.charm?igsh=MW84NGRmNTk5NjZxcQ==" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
         <a href="https://www.tiktok.com/@toncompte" target="_blank"><i class="fa-brands fa-tiktok"></i> TikTok</a>
         <a href="mailto:ton@email.com"><i class="fa-solid fa-envelope"></i> Email</a>
       </div>
